# ML_Fundus_Image_Classification_Deployment

./: .dockerignore  .gitignore  DBfunc.py  Dockerfile  Makefile  Models.py  README.md  docker-compose.yml  gloabal_vars.py  main.py  pyproject.toml  requirements.txt  utils.py
MLmodel/: Inference.py  ModelDefenitions.py  PreProcessing.py  gradcam.py
fundus-ui-fe/: index.html  package.json  vite.config.ts
fundus-ui-fe/src/: index.css
fundus-ui-fe/src/components/: Button.tsx  Input.tsx
fundus-ui-fe/src/lib/: api.ts
fundus-ui-fe/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx
routers/: authrouter.py  modelrouter.py  records.py  registration.py
src/api/routers/: authrouter.py  modelrouter.py  records.py  registration.py
src/app/: main.py
src/core/: __init__.py  config.py  logging.py  metadata.py
src/db/: __init__.py  dbfunc.py
src/ml/: gradcam.py  inference.py  model_definitions.py  preprocessing.py
src/schemas/: __init__.py  models.py
src/shared/: __init__.py  utils.py
