[project]
name = "ml-fundus-image-classification-deployment"
version = "0.1.0"
description = "FastAPI backend for retinal fundus image classification with Grad-CAM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "itsdangerous>=2.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "timm>=1.0.0",
    "opencv-python-headless>=4.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
